<resources>
    <string name="app_name">MamMam</string>
    <string name="mammam">MAM MAM</string>
    <string name="version">VERSION 1.0 BETA</string>
    <string name="DevTeam">ACDP</string>
    <string name="loading">Đang tải...</string>
    <string name="btn_near_me">Quán ăn gần đây</string>
    <string name="btn_promotion">Khuyến mãi</string>
    <string name="btn_book_place">Đặt chỗ</string>
    <string name="btn_event">Sự kiện</string>
    <string name="btn_top_comment">Top bình luận</string>
    <string name="btn_new">Mới</string>
    <string name="suggestion">GỢI Ý</string>
    <string name="gioithieu">Nhà hàng hải sản Biển Đông 05 là một trong chuỗi các nhà hàng của
    công ty TNHH Biển Đông. Chúng tôi nhận tổ chức các sự kiện như cưới hỏi, sinh nhật,tiệc họp mặt.
    Chúng tôi luôn cam kết về chất lượng món ăn, cũng như tiêu chí an toàn vệ sinh thực phẩm</string>
    <string name="facebook_app_id">279961305753877</string>
</resources>
