<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#ff0000"
    android:orientation="vertical"
    tools:context="com.khtn.mammam.MainActivity">

    <TextView
        android:layout_gravity="center"
        android:paddingTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mammam"
        android:textSize="50sp"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <TextView
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <ProgressBar
        android:paddingTop="10dp"
        android:id="@+id/progressBar1"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#ffffff"
        tools:targetApi="lollipop" />
    <TextView
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:gravity="bottom"
        android:textColor="#ffffff"
        android:layout_height="match_parent"
        android:text="@string/DevTeam"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

</LinearLayout>
