<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_suggestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.khtn.mammam.SuggestionActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:background="#cc0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_weight="0.7"
            android:layout_marginLeft="10dp"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/suggestion"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textSize="30sp"
            android:layout_marginLeft="0dp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="4dp"
            app:srcCompat="@mipmap/icon_save"
            android:id="@+id/ivSave"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/searching"
            android:id="@+id/ivSearch"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/notification"
            android:id="@+id/ivNotification"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/user"
            android:id="@+id/ivUserProfile"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/btn_near_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_location"
                android:id="@+id/btnGanToi"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:text="@string/btn_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_new1"
                android:id="@+id/btnMoi"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btn_top_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/icon_high"
                android:id="@+id/btnTopBinhLuan"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blankBtn"
                android:text="Đang Giảm Giá"
                android:drawableLeft="@mipmap/icon_sale"
                android:layout_weight="1"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSearchKeyword"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <GridView
        android:layout_width="match_parent"
        android:id="@+id/gridSuggest"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="match_parent"
        android:numColumns="2"/>
</LinearLayout>
